--- a/Login.html
+++ b/Login.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport"id="" content="width"=device-widh, initial-scale="1"/>    
- <title>www.chrisrathana.shopflag.com|Login</title>
+ <title>chrisrathana.shopflag.com|Login.html</title>
 <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet.css">
 <link rel="icon" type rel="icon" href="images/phonrathana.png">
 <link rel="stylesheet" type="text/css" href="css/style.css">
